RESOLVED FIXED60050
JITPropertyAccess produces a unused but set variable warning in gcc 4.6.0.
https://bugs.webkit.org/show_bug.cgi?id=60050
Summary JITPropertyAccess produces a unused but set variable warning in gcc 4.6.0.
Alexis Menard (darktears)
Reported 2011-05-03 12:26:42 PDT
JITPropertyAccess produces a unused but set variable warning in gcc 4.6.0.
Attachments
Patch (5.03 KB, patch)
2011-05-03 12:34 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-05-03 12:34:33 PDT
Geoffrey Garen
Comment 2 2011-05-03 14:30:02 PDT
Comment on attachment 92104 [details] Patch r=me
WebKit Commit Bot
Comment 3 2011-05-04 01:33:22 PDT
Comment on attachment 92104 [details] Patch Clearing flags on attachment: 92104 Committed r85725: <http://trac.webkit.org/changeset/85725>
WebKit Commit Bot
Comment 4 2011-05-04 01:33:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.